<resources>
    <string name="app_name">GID</string>
    <string name="feed">Feed</string>
    <string name="discounts">Discounts</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string-array name="settings_general_languages_values">
        <item>EN</item>
        <item>RU</item>
    </string-array>

    <string-array name="settings_general_languages_entries">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="settings_platforms_values">
        <item>windows</item>
        <item>mac</item>
        <item>linux</item>
        <item>ps5</item>
        <item>ps4</item>
        <item>ps3</item>
    </string-array>

    <string-array name="settings_platforms_entries">
        <item>Windows</item>
        <item>Mac OS</item>
        <item>Linux</item>
        <item>Playstation 5</item>
        <item>Playstation 4</item>
        <item>Playstation 3</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile_title_library">Library</string>
    <string name="profile_title_wishlist">Wishlist</string>
    <string name="profile_title_unreleased">To be released</string>
    <string name="profile_title_reviews">Reviews</string>
    <string name="profile_title_logins">Logins</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steam_login">Steam login</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="about">About</string>
    <string name="add_to_wishlist">Add to wishlist</string>
</resources>
