<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_feed"
        android:title="@string/feed"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_discounts"
        android:title="@string/discounts"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"

        android:title="@string/search"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>