<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileLogin">

    <LinearLayout
        android:id="@+id/steam_login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/steam_logo" />

        <TextView
            android:id="@+id/steam_login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steam_login" />

        <EditText
            android:id="@+id/steam_login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/login" />

        <TextView
            android:id="@+id/steam_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/steam_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/steam_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

</FrameLayout>